# ChangeLog for app-editors/bluefish
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/bluefish/ChangeLog,v 1.78 2011/12/30 13:44:14 scarabeus Exp $

*bluefish-2.2.1 (30 Dec 2011)

  30 Dec 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  -files/bluefish-2.0.0-gucharmap-automagic.patch, -bluefish-2.0.3.ebuild,
  +bluefish-2.2.1.ebuild, metadata.xml:
  Version bump to the latest. Solve issues with non-working translations. Fixes
  bugs #362035 #370309 and #392295.

*bluefish-2.0.3 (05 Jun 2011)

  05 Jun 2011; Tomáš Chvátal <scarabeus@gentoo.org> -bluefish-2.0.0.ebuild,
  -bluefish-2.0.1.ebuild, -bluefish-2.0.2.ebuild, +bluefish-2.0.3.ebuild:
  Version bump to 2.0.3. Drop older overshadowed versions. Fixes bug #359127.

  29 Mar 2011; Christoph Mende <angelos@gentoo.org> bluefish-1.0.7.ebuild:
  Fixed slot deps

*bluefish-2.0.2 (29 Nov 2010)

  29 Nov 2010; Hanno Boeck <hanno@gentoo.org> +bluefish-2.0.2.ebuild:
  Version bump, minor fixes.

  29 Nov 2010; Hanno Boeck <hanno@gentoo.org>
  -files/bluefish-1.3.8-gucharmap-automagic.patch:
  Remove unused patch, fix #340549.

  03 Aug 2010; Hanno Boeck <hanno@gentoo.org> bluefish-2.0.1.ebuild:
  Fix compilation with latest gettext.

  15 Jul 2010; Daniel Pielmeier <billie@gentoo.org> bluefish-2.0.1.ebuild:
  Fix Bug #311171 - Take two.

*bluefish-2.0.1 (15 Jul 2010)

  15 Jul 2010; Daniel Pielmeier <billie@gentoo.org> -bluefish-1.3.8.ebuild,
  +bluefish-2.0.1.ebuild:
  Version bump. Fixes bug #311171. Remove old.

*bluefish-2.0.0 (15 Feb 2010)

  15 Feb 2010; Daniel Pielmeier <billie@gentoo.org>
  -bluefish-2.0.0_rc3.ebuild, +bluefish-2.0.0.ebuild,
  +files/bluefish-2.0.0-gucharmap-automagic.patch,
  -files/bluefish-2.0.0_rc1-gucharmap-automagic.patch:
  Version bump to final release. Remove latest release candidate.

*bluefish-2.0.0_rc3 (02 Feb 2010)

  02 Feb 2010; Daniel Pielmeier <billie@gentoo.org>