@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/bluefish
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/bluefish/ChangeLog,v 1.78 2011/12/30 13:44:14 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/bluefish/ChangeLog,v 1.79 2011/12/30 13:47:48 scarabeus Exp $
+
+  30 Dec 2011; Tomáš Chvátal <scarabeus@gentoo.org> bluefish-2.2.1.ebuild:
+  Restrict tests as they do nothing.
 
 *bluefish-2.2.1 (30 Dec 2011)
 
